--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,13 @@
     opacity: 0.7;
 }
 
+.l_routes i {
+    width: 18px;
+    height: 5px;
+    float: left;
+    margin: 5px 8px 0 0;
+}
+
 .legend i.icon {
     background-size: 18px;
     background-color: rgba(255, 255, 255, 1);
