--- a/css/style.css
+++ b/css/style.css
@@ -32,3 +32,46 @@
     background-size: 18px;
     background-color: rgba(255, 255, 255, 1);
 }
+
+#map 
+{
+    position: relative;
+}
+
+#leafletMap
+{
+    width: 1350px; 
+    height: 600px;
+    position: relative; 
+    z-index: 1;
+    bottom: 0; 
+}
+
+#route 
+{
+    position: absolute; 
+    bottom: 0;
+    z-index: 2;
+}
+
+#routeSelection
+{
+    position: relative;
+    background-color: rgba(255, 255, 255, 1);
+    bottom: 0px; 
+    border: 2px solid rgba(0,0,0,0.2);
+    background-clip: padding-box;
+    box-shadow: none;
+    margin-bottom: 10px;
+    margin-left: 10px;
+    padding: 6px 10px 6px 6px;
+    font: 12px/1.5 "Helvetica Neue", Arial, Helvetica, sans-serif;
+    border-radius: 5px;
+}
+
+#routeButton
+{
+    margin-left: 10px; 
+    position: relative; 
+    margin-bottom: 10px;
+}
