--- a/css/style.css
+++ b/css/style.css
@@ -124,27 +124,102 @@ body{ overflow-x: hidden;}
 
   }
 
-@import "bootstrap/functions";
-@import "bootstrap/variables";
-
-$grid-breakpoints: (
-  xxs: 0,
-  xs: 375px,
-  sm: 544px,
-  md: 768px,
-  lg: 992px,
-  xl: 1200px,
-  xxl: 1300px
-);
-
-$container-max-widths: (
-  xxs: 375px,
-  xs: 375px,
-  sm: 544px,
-  md: 768px,
-  lg: 992px,
-  xl: 1200px,
-  xxl: 1300px
-);
-
-@import "bootstrap";
+  @media (min-width: 1400px) {
+	.col-xxl {
+	  -ms-flex-preferred-size: 0;
+		  flex-basis: 0;
+	  -webkit-box-flex: 1;
+		  -ms-flex-positive: 1;
+			  flex-grow: 1;
+	  max-width: 100%; }
+	.col-xxl-auto {
+	  -webkit-box-flex: 0;
+		  -ms-flex: 0 0 auto;
+			  flex: 0 0 auto;
+	  width: auto;
+	  max-width: none; }
+	.col-xxl-1 {
+	  -webkit-box-flex: 0;
+		  -ms-flex: 0 0 8.33333%;
+			  flex: 0 0 8.33333%;
+	  max-width: 8.33333%; }
+	.col-xxl-2 {
+	  -webkit-box-flex: 0;
+		  -ms-flex: 0 0 16.66667%;
+			  flex: 0 0 16.66667%;
+	  max-width: 16.66667%; }
+	.col-xxl-3 {
+	  -webkit-box-flex: 0;
+		  -ms-flex: 0 0 25%;
+			  flex: 0 0 25%;
+	  max-width: 25%; }
+	.col-xxl-4 {
+	  -webkit-box-flex: 0;
+		  -ms-flex: 0 0 33.33333%;
+			  flex: 0 0 33.33333%;
+	  max-width: 33.33333%; }
+	.col-xxl-5 {
+	  -webkit-box-flex: 0;
+		  -ms-flex: 0 0 41.66667%;
+			  flex: 0 0 41.66667%;
+	  max-width: 41.66667%; }
+	.col-xxl-6 {
+	  -webkit-box-flex: 0;
+		  -ms-flex: 0 0 50%;
+			  flex: 0 0 50%;
+	  max-width: 50%; }
+	.col-xxl-7 {
+	  -webkit-box-flex: 0;
+		  -ms-flex: 0 0 58.33333%;
+			  flex: 0 0 58.33333%;
+	  max-width: 58.33333%; }
+	.col-xxl-8 {
+	  -webkit-box-flex: 0;
+		  -ms-flex: 0 0 66.66667%;
+			  flex: 0 0 66.66667%;
+	  max-width: 66.66667%; }
+	.col-xxl-9 {
+	  -webkit-box-flex: 0;
+		  -ms-flex: 0 0 75%;
+			  flex: 0 0 75%;
+	  max-width: 75%; }
+	.col-xxl-10 {
+	  -webkit-box-flex: 0;
+		  -ms-flex: 0 0 83.33333%;
+			  flex: 0 0 83.33333%;
+	  max-width: 83.33333%; }
+	.col-xxl-11 {
+	  -webkit-box-flex: 0;
+		  -ms-flex: 0 0 91.66667%;
+			  flex: 0 0 91.66667%;
+	  max-width: 91.66667%; }
+	.col-xxl-12 {
+	  -webkit-box-flex: 0;
+		  -ms-flex: 0 0 100%;
+			  flex: 0 0 100%;
+	  max-width: 100%; }
+	  .offset-xxl-0 {
+		margin-left: 0; }
+	  .offset-xxl-1 {
+		margin-left: 8.33333%; }
+	  .offset-xxl-2 {
+		margin-left: 16.66667%; }
+	  .offset-xxl-3 {
+		margin-left: 25%; }
+	  .offset-xxl-4 {
+		margin-left: 33.33333%; }
+	  .offset-xxl-5 {
+		margin-left: 41.66667%; }
+	  .offset-xxl-6 {
+		margin-left: 50%; }
+	  .offset-xxl-7 {
+		margin-left: 58.33333%; }
+	  .offset-xxl-8 {
+		margin-left: 66.66667%; }
+	  .offset-xxl-9 {
+		margin-left: 75%; }
+	  .offset-xxl-10 {
+		margin-left: 83.33333%; }
+	  .offset-xxl-11 {
+		margin-left: 91.66667%; } 
+	}
