--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,11 @@
     bottom: 3px;
 }
 
+.fas{
+	margin-left: 4px;
+    margin-right: 2px;
+}
+
 .legend i {
     width: 18px;
     height: 18px;
@@ -32,6 +37,13 @@
 }
 
 .l_routes i {
+    width: 18px;
+    height: 5px;
+    float: left;
+    margin: 5px 8px 0 0;
+}
+
+.color {
     width: 18px;
     height: 5px;
     float: left;
@@ -51,7 +63,7 @@
 #leafletMap
 {
     width: 100%; 
-    height: 90vh;
+    height: 95vh;
     position: relative; 
     z-index: 1;
     bottom: 0; 
@@ -59,6 +71,7 @@
 
 #route 
 {
+	width: 60%;
     position: absolute; 
     bottom: 0;
     z-index: 2;
@@ -123,6 +136,11 @@ body{ overflow-x: hidden;}
 
 
   }
+
+.navbar {
+    height: 5vh;
+}
+
 
   @media (min-width: 1400px) {
 	.col-xxl {
