Months as words and legends same width

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
     /*border-radius: 5px;*/
     line-height: 24px;
     color: #555;
+    width: 140px;
 }
 .legend h4 {
     text-align: center;
