--- a/css/style.css
+++ b/css/style.css
@@ -1,244 +1,303 @@
 .hideme {
-    display: none !important;
+	display: none !important;
 }
+
 .legend {
-    padding: 6px 8px;
-    font: 14px Arial, Helvetica, sans-serif;
-    background: white;
-    background: rgba(255, 255, 255, 0.8);
-    /*box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);*/
-    /*border-radius: 5px;*/
-    line-height: 24px;
-    color: #555;
-    width: 140px;
+	padding: 6px 8px;
+	font: 14px Arial, Helvetica, sans-serif;
+	background: white;
+	background: rgba(255, 255, 255, 0.8);
+	/*box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);*/
+	/*border-radius: 5px;*/
+	line-height: 24px;
+	color: #555;
+	width: 140px;
 }
+
 .legend h4 {
-    text-align: center;
-    font-size: 16px;
-    margin: 2px 12px 8px;
-    color: #777;
+	text-align: center;
+	font-size: 16px;
+	margin: 2px 12px 8px;
+	color: #777;
 }
 
 .legend span {
-    position: relative;
-    bottom: 3px;
+	position: relative;
+	bottom: 3px;
 }
 
-.fas{
+.fas {
 	margin-left: 4px;
-    margin-right: 2px;
+	margin-right: 2px;
 }
 
 .legend i {
-    width: 18px;
-    height: 18px;
-    float: left;
-    margin: 0 8px 0 0;
-    opacity: 0.7;
+	width: 18px;
+	height: 18px;
+	float: left;
+	margin: 0 8px 0 0;
+	opacity: 0.7;
 }
 
 .l_routes i {
-    width: 18px;
-    height: 5px;
-    float: left;
-    margin: 5px 8px 0 0;
+	width: 18px;
+	height: 5px;
+	float: left;
+	margin: 5px 8px 0 0;
 }
 
 .color {
-    width: 18px;
-    height: 5px;
-    float: left;
-    margin: 5px 8px 0 0;
+	width: 18px;
+	height: 5px;
+	float: left;
+	margin: 5px 8px 0 0;
 }
 
 .legend i.icon {
-    background-size: 18px;
-    background-color: rgba(255, 255, 255, 1);
+	background-size: 18px;
+	background-color: rgba(255, 255, 255, 1);
 }
 
-#map 
-{
-    position: relative;
+#map {
+	position: relative;
 }
 
-#leafletMap
-{
-    width: 100%; 
-    height: 95vh;
-    position: relative; 
-    z-index: 1;
-    bottom: 0; 
+#leafletMap {
+	width: 100%;
+	height: 95vh;
+	position: relative;
+	z-index: 1;
+	bottom: 0;
 }
 
-#route 
-{
+#route {
 	width: 60%;
-    position: absolute; 
-    bottom: 0;
-    z-index: 2;
+	position: absolute;
+	bottom: 0;
+	z-index: 2;
 }
 
-#routeSelection
-{
-    position: relative;
-    background-color: rgba(255, 255, 255, 1);
-    bottom: 0px; 
-    border: 2px solid rgba(0,0,0,0.2);
-    background-clip: padding-box;
-    box-shadow: none;
-    margin-bottom: 10px;
-    margin-left: 10px;
-    padding: 6px 10px 6px 6px;
-    font: 12px/1.5 "Helvetica Neue", Arial, Helvetica, sans-serif;
-    border-radius: 5px;
+#routeSelection {
+	position: relative;
+	background-color: rgba(255, 255, 255, 1);
+	bottom: 0px;
+	border: 2px solid rgba(0, 0, 0, 0.2);
+	background-clip: padding-box;
+	box-shadow: none;
+	margin-bottom: 10px;
+	margin-left: 10px;
+	padding: 6px 10px 6px 6px;
+	font: 12px/1.5 "Helvetica Neue", Arial, Helvetica, sans-serif;
+	border-radius: 5px;
 }
 
-#routeButton
-{
-    margin-left: 10px; 
-    position: relative; 
-    margin-bottom: 10px;
-
-    background-color: rgba(255, 255, 255, 1);
-    bottom: 0px; 
-    border: 2px solid rgba(0,0,0,0.2);
-    background-clip: padding-box;
-    box-shadow: none;
-    margin-bottom: 10px;
-    margin-left: 10px;
-    padding: 6px 10px 6px 6px;
-    font: 12px/1.5 "Helvetica Neue", Arial, Helvetica, sans-serif;
-    border-radius: 5px;
-  
-
+#routeButton {
+	margin-left: 10px;
+	position: relative;
+	margin-bottom: 10px;
+	background-color: rgba(255, 255, 255, 1);
+	bottom: 0px;
+	border: 2px solid rgba(0, 0, 0, 0.2);
+	background-clip: padding-box;
+	box-shadow: none;
+	margin-bottom: 10px;
+	margin-left: 10px;
+	padding: 6px 10px 6px 6px;
+	font: 12px/1.5 "Helvetica Neue", Arial, Helvetica, sans-serif;
+	border-radius: 5px;
 }
 
-body{ overflow-x: hidden;}
+body {
+	overflow-x: hidden;
+}
 
 #overlay {
-    position: fixed; /* Sit on top of the page content */
-    width: 100%; /* Full width (cover the whole page) */
-    height: 100%; /* Full height (cover the whole page) */
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(255, 255, 255, 0.5); /* Black background with opacity */
-    z-index: 50000; /* Specify a stack order in case you're using a different order for other elements */
-    cursor: pointer; /* Add a pointer on hover */
-  }
-
-  .spinner {
-    display: block;
-    position: fixed;
-    z-index: 50001; /* High z-index so it is on top of the page */
-    top: 50%;
-    right: 50%; /* or: left: 50%; */
-
-
-  }
-
-.navbar {
-    height: 5vh;
+	position: fixed;
+	/* Sit on top of the page content */
+	width: 100%;
+	/* Full width (cover the whole page) */
+	height: 100%;
+	/* Full height (cover the whole page) */
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-color: rgba(255, 255, 255, 0.5);
+	/* Black background with opacity */
+	z-index: 50000;
+	/* Specify a stack order in case you're using a different order for other elements */
+	cursor: pointer;
+	/* Add a pointer on hover */
 }
 
+.spinner {
+	display: block;
+	position: fixed;
+	z-index: 50001;
+	/* High z-index so it is on top of the page */
+	top: 50%;
+	right: 50%;
+	/* or: left: 50%; */
+}
 
-  @media (min-width: 1400px) {
+.navbar {
+	height: 5vh;
+}
+
+@media (min-width: 1400px) {
 	.col-xxl {
-	  -ms-flex-preferred-size: 0;
-		  flex-basis: 0;
-	  -webkit-box-flex: 1;
-		  -ms-flex-positive: 1;
-			  flex-grow: 1;
-	  max-width: 100%; }
-	.col-xxl-auto {
-	  -webkit-box-flex: 0;
-		  -ms-flex: 0 0 auto;
-			  flex: 0 0 auto;
-	  width: auto;
-	  max-width: none; }
-	.col-xxl-1 {
-	  -webkit-box-flex: 0;
-		  -ms-flex: 0 0 8.33333%;
-			  flex: 0 0 8.33333%;
-	  max-width: 8.33333%; }
-	.col-xxl-2 {
-	  -webkit-box-flex: 0;
-		  -ms-flex: 0 0 16.66667%;
-			  flex: 0 0 16.66667%;
-	  max-width: 16.66667%; }
-	.col-xxl-3 {
-	  -webkit-box-flex: 0;
-		  -ms-flex: 0 0 25%;
-			  flex: 0 0 25%;
-	  max-width: 25%; }
-	.col-xxl-4 {
-	  -webkit-box-flex: 0;
-		  -ms-flex: 0 0 33.33333%;
-			  flex: 0 0 33.33333%;
-	  max-width: 33.33333%; }
-	.col-xxl-5 {
-	  -webkit-box-flex: 0;
-		  -ms-flex: 0 0 41.66667%;
-			  flex: 0 0 41.66667%;
-	  max-width: 41.66667%; }
-	.col-xxl-6 {
-	  -webkit-box-flex: 0;
-		  -ms-flex: 0 0 50%;
-			  flex: 0 0 50%;
-	  max-width: 50%; }
-	.col-xxl-7 {
-	  -webkit-box-flex: 0;
-		  -ms-flex: 0 0 58.33333%;
-			  flex: 0 0 58.33333%;
-	  max-width: 58.33333%; }
-	.col-xxl-8 {
-	  -webkit-box-flex: 0;
-		  -ms-flex: 0 0 66.66667%;
-			  flex: 0 0 66.66667%;
-	  max-width: 66.66667%; }
-	.col-xxl-9 {
-	  -webkit-box-flex: 0;
-		  -ms-flex: 0 0 75%;
-			  flex: 0 0 75%;
-	  max-width: 75%; }
-	.col-xxl-10 {
-	  -webkit-box-flex: 0;
-		  -ms-flex: 0 0 83.33333%;
-			  flex: 0 0 83.33333%;
-	  max-width: 83.33333%; }
-	.col-xxl-11 {
-	  -webkit-box-flex: 0;
-		  -ms-flex: 0 0 91.66667%;
-			  flex: 0 0 91.66667%;
-	  max-width: 91.66667%; }
-	.col-xxl-12 {
-	  -webkit-box-flex: 0;
-		  -ms-flex: 0 0 100%;
-			  flex: 0 0 100%;
-	  max-width: 100%; }
-	  .offset-xxl-0 {
-		margin-left: 0; }
-	  .offset-xxl-1 {
-		margin-left: 8.33333%; }
-	  .offset-xxl-2 {
-		margin-left: 16.66667%; }
-	  .offset-xxl-3 {
-		margin-left: 25%; }
-	  .offset-xxl-4 {
-		margin-left: 33.33333%; }
-	  .offset-xxl-5 {
-		margin-left: 41.66667%; }
-	  .offset-xxl-6 {
-		margin-left: 50%; }
-	  .offset-xxl-7 {
-		margin-left: 58.33333%; }
-	  .offset-xxl-8 {
-		margin-left: 66.66667%; }
-	  .offset-xxl-9 {
-		margin-left: 75%; }
-	  .offset-xxl-10 {
-		margin-left: 83.33333%; }
-	  .offset-xxl-11 {
-		margin-left: 91.66667%; } 
+		-ms-flex-preferred-size: 0;
+		flex-basis: 0;
+		-webkit-box-flex: 1;
+		-ms-flex-positive: 1;
+		flex-grow: 1;
+		max-width: 100%;
 	}
+	.col-xxl-auto {
+		-webkit-box-flex: 0;
+		-ms-flex: 0 0 auto;
+		flex: 0 0 auto;
+		width: auto;
+		max-width: none;
+	}
+	.col-xxl-1 {
+		-webkit-box-flex: 0;
+		-ms-flex: 0 0 8.33333%;
+		flex: 0 0 8.33333%;
+		max-width: 8.33333%;
+	}
+	.col-xxl-2 {
+		-webkit-box-flex: 0;
+		-ms-flex: 0 0 16.66667%;
+		flex: 0 0 16.66667%;
+		max-width: 16.66667%;
+	}
+	.col-xxl-3 {
+		-webkit-box-flex: 0;
+		-ms-flex: 0 0 25%;
+		flex: 0 0 25%;
+		max-width: 25%;
+	}
+	.col-xxl-4 {
+		-webkit-box-flex: 0;
+		-ms-flex: 0 0 33.33333%;
+		flex: 0 0 33.33333%;
+		max-width: 33.33333%;
+	}
+	.col-xxl-5 {
+		-webkit-box-flex: 0;
+		-ms-flex: 0 0 41.66667%;
+		flex: 0 0 41.66667%;
+		max-width: 41.66667%;
+	}
+	.col-xxl-6 {
+		-webkit-box-flex: 0;
+		-ms-flex: 0 0 50%;
+		flex: 0 0 50%;
+		max-width: 50%;
+	}
+	.col-xxl-7 {
+		-webkit-box-flex: 0;
+		-ms-flex: 0 0 58.33333%;
+		flex: 0 0 58.33333%;
+		max-width: 58.33333%;
+	}
+	.col-xxl-8 {
+		-webkit-box-flex: 0;
+		-ms-flex: 0 0 66.66667%;
+		flex: 0 0 66.66667%;
+		max-width: 66.66667%;
+	}
+	.col-xxl-9 {
+		-webkit-box-flex: 0;
+		-ms-flex: 0 0 75%;
+		flex: 0 0 75%;
+		max-width: 75%;
+	}
+	.col-xxl-10 {
+		-webkit-box-flex: 0;
+		-ms-flex: 0 0 83.33333%;
+		flex: 0 0 83.33333%;
+		max-width: 83.33333%;
+	}
+	.col-xxl-11 {
+		-webkit-box-flex: 0;
+		-ms-flex: 0 0 91.66667%;
+		flex: 0 0 91.66667%;
+		max-width: 91.66667%;
+	}
+	.col-xxl-12 {
+		-webkit-box-flex: 0;
+		-ms-flex: 0 0 100%;
+		flex: 0 0 100%;
+		max-width: 100%;
+	}
+	.offset-xxl-0 {
+		margin-left: 0;
+	}
+	.offset-xxl-1 {
+		margin-left: 8.33333%;
+	}
+	.offset-xxl-2 {
+		margin-left: 16.66667%;
+	}
+	.offset-xxl-3 {
+		margin-left: 25%;
+	}
+	.offset-xxl-4 {
+		margin-left: 33.33333%;
+	}
+	.offset-xxl-5 {
+		margin-left: 41.66667%;
+	}
+	.offset-xxl-6 {
+		margin-left: 50%;
+	}
+	.offset-xxl-7 {
+		margin-left: 58.33333%;
+	}
+	.offset-xxl-8 {
+		margin-left: 66.66667%;
+	}
+	.offset-xxl-9 {
+		margin-left: 75%;
+	}
+	.offset-xxl-10 {
+		margin-left: 83.33333%;
+	}
+	.offset-xxl-11 {
+		margin-left: 91.66667%;
+	}
+}
+
+.collapsible {
+	background-color: #8b8c97;
+	color: white;
+	cursor: pointer;
+	padding: 18px;
+	width: 100%;
+	border: none;
+	text-align: left;
+	outline: none;
+	font-size: 15px;
+  }
+  
+  .collapsible:hover {
+	background-color: #555;
+  }
+  
+  .collapsible:after {
+	content: '\002B';
+	color: white;
+	font-weight: bold;
+	float: right;
+	margin-left: 5px;
+  }
+  
+  .content {
+	padding: 0 18px;
+	max-height: 0;
+	overflow: hidden;
+	transition: max-height 0.2s ease-out;
+	background-color: #f1f1f1;
+  }
